@@ -1,5 +1,5 @@
 AUX Makefile 1630 SHA1 adf654b466862dd9422126c47aac2941f27125f5
 DIST nativebiginteger-0.6.1.31.tar.bz2 9176 SHA1 342d70cecb5fba311c99ee76ade9dfe0b55ae981
-EBUILD nativebiginteger-0.6.1.31.ebuild 746 SHA1 55c5ddf8297cc0544bc446d80fb13f232996576a
-MISC ChangeLog 578 SHA1 2672b16e5c167d800dae63c6906bc36f355cb854
+EBUILD nativebiginteger-0.6.1.31.ebuild 774 SHA1 c18c946d7ce2ca24eae257ad9e4819bd86045bc0
+MISC ChangeLog 720 SHA1 a9e7750c205d943e39f5de73a0c4b824a716731a
 MISC metadata.xml 170 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4
