@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  nativebiginteger-0.6.1.31.ebuild:
+  Update dependencies, thanks to bonsaikitten
+
   01 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> files/Makefile:
   Prevent potential install error
 
